<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HeroDetailActivity">

    <TextView
        android:id="@+id/textView_heroDetail_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hero_name"
        app:layout_constraintBottom_toTopOf="@+id/imageView_herodetail_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView_herodetail_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/textView_heroDetail_descriptionLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_heroDetail_name"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/textView_heroDetail_descriptionLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/descriptionLabel"
        app:layout_constraintBottom_toTopOf="@+id/textView_heroDetail_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_herodetail_profile" />

    <TextView
        android:id="@+id/textView_heroDetail_superpowerLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/superpowerLabel"
        app:layout_constraintBottom_toTopOf="@+id/textView_heroDetail_superpower"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_heroDetail_description" />

    <TextView
        android:id="@+id/textView_heroDetail_rankingLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rankingLabel"
        app:layout_constraintBottom_toTopOf="@+id/textView_heroDetail_ranking"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_heroDetail_superpower" />

    <TextView
        android:id="@+id/textView_heroDetail_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"
        app:layout_constraintBottom_toTopOf="@+id/textView_heroDetail_superpowerLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_heroDetail_descriptionLabel" />

    <TextView
        android:id="@+id/textView_heroDetail_superpower"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/superpower"
        app:layout_constraintBottom_toTopOf="@+id/textView_heroDetail_rankingLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_heroDetail_superpowerLabel" />

    <TextView
        android:id="@+id/textView_heroDetail_ranking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ranking"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_heroDetail_rankingLabel" />

    <Button
        android:id="@+id/button_heroDetail_goback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_back"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="22dp" />

</androidx.constraintlayout.widget.ConstraintLayout>